...
      .toolbar {
        ToolbarItem {
          Button(action: addCard) {
            Image(systemName: "plus")
              .accessibilityHidden(true)
          }
          .accessibilityIdentifier("addCardButton")
          .accessibilityLabel("add.card".localized)
        }
      }
      .toolbarBackground(Color(red: 0.239, green: 0.204, blue: 0.188), for: .automatic)
      .toolbarBackground(.visible, for: .automatic)
      .foregroundColor(.white)
...
